force-app/main/default/objects/RD_Attributes_Lookup_Detail__c/RD_Attributes_Lookup_Detail__c.object-meta.xml
<CustomObject>
    <label>RD AttributesLookupDetail</label>
    <nameField>
        <label>RD AttributesLookupDetail</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD AttributesLookupDetail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>