force-app/main/default/objects/RD_Attributes_Lookup_Detail__c/fields/NumVal2__c.field-meta.xml
<CustomField>
    <fullName>NumVal2__c</fullName>
    <label>Num2Val</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>