force-app/main/default/objects/RD_Attributes_Lookup_Detail__c/fields/Text3Val__c.field-meta.xml
<CustomField>
    <fullName>Text3Val__c</fullName>
    <label>Text3Val</label>
    <length>255</length>
    <type>Text</type>
</CustomField>