force-app/main/default/objects/RD_Attributes_Lookup_Detail__c/fields/Text__c.field-meta.xml
<CustomField>
    <fullName>Text__c</fullName>
    <label>Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>