force-app/main/default/objects/RD_Attributes_Lookup_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Attribute__c</columns>
    <columns>Text1Val__c</columns>
    <columns>Text2Val__c</columns>
    <columns>Text3Val__c</columns>
    <columns>TextVal4__c</columns>
    <columns>NumVal1__c</columns>
    <columns>NumVal2__c</columns>
    <columns>Text__c</columns>
    <columns>Value__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Attribute__c</field>
        <operation>contains</operation>
        <value>hsn</value>
    </filters>
    <label>All</label>
</ListView>